<resources>
    <string name="app_name">Story Dicoding</string>
    <string name="ErrorMassagePassword">Password must be at least 6 characters long</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="Emailhint">Please Input Your Email</string>
    <string name="Namelhint">Please Input Your Username</string>
    <string name="passwordlhint">Please Input Your Password</string>
    <string name="login">Login</string>
    <string name="donthavaccount">don\'t have account yet ?  </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up1">Sign Up</string>
    <string name="haveaccount">already have account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="description">description</string>
    <string name="logo">Logo</string>
    <string name="logo2">logo2</string>
    <string name="setting">setting</string>
    <string name="datanotfound">Can not Load Data</string>
    <string name="successlogin">success to login</string>
    <string name="failedlogin">failed to login</string>
    <string name="successsignup">success to signup</string>
    <string name="failedsignup">failed to signup</string>
    <string name="failedsignup2">Failed to make account</string>
    <string name="failedlogin2">Failed to Login wrong email or pasword</string>
    <string name="failedgetdata">Failed to get data or data is empty</string>
    <string name="upload">Upload</string>
    <string name="floatingbutton">Floatingbutton</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
</resources>