<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.LoginActivity">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dicoding_default" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:alpha="0"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/LoginText"
        app:layout_constraintTop_toBottomOf="@+id/LoginText" />


    <id.whynot.submission3.TextInputPassword.NewTextInput
        android:id="@+id/inputemail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:hint="@string/Emailhint"
        app:layout_constraintStart_toStartOf="@+id/EmailText"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/inputemail"
        app:layout_constraintTop_toBottomOf="@+id/inputemail" />

    <id.whynot.submission3.TextInputPassword.password
        android:id="@+id/inputpasword"
        android:hint="@string/passwordlhint"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:password="true"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        tools:ignore="Deprecated" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:background="@drawable/button_logion_signup"
        android:text="@string/login"
        android:textColor="@color/white2"
        app:layout_constraintEnd_toEndOf="@+id/inputpasword"
        app:layout_constraintStart_toStartOf="@+id/inputpasword"
        app:layout_constraintTop_toBottomOf="@+id/inputpasword" />

    <LinearLayout
        android:id="@+id/BottomLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginBTN"
        app:layout_constraintStart_toStartOf="@+id/LoginBTN"
        app:layout_constraintTop_toBottomOf="@+id/LoginBTN">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthavaccount" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:shadowColor="@color/white"
            android:text="@string/sign_up"
            android:background="@color/white"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/blackscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black20"
        android:visibility="invisible"
        android:alpha="1"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>